SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

The former file import now allows to import from clipboard, too.

Connect button in Alias dialog.

Change tracking:
  Changes can be tracked by light yellow bars (gutters) at both sides of the editor.
  Change tracking has three modes: Manual, file based and GIT based (see https://git-scm.com).
  The modes can be switched using the switchable change track toolbar button (the one with the paw icon).
  For more information on change tracking please see toolbar buttons' tooltips.
  Note: When the change tracking toolbar button is switched to "Manually rebase" the reloaded contents are automatically made the initial change track base.

Hibernate Plugin: The Hibernate process details dialog now has an option "Restore default to run in console".
   This generates the SQuirreL's Hibernate server launch command such that the process runs in a console window.

Recent files dialog: New right mouse menu items in file list: "Copy path" and "Copy file name"

"View Objects window alongside SQL" function is now also accessible through Session menu, tools popup (ctrl+t) and can be assigned a keyboard short cut.

Import CSV/Excel files: New check box "Use double quotes as text qualifier" in CSV import file settings

#1410 Import CSV/Excel files without existing table
  Import of CVS and MS-Excel files is now available not only on tables in Object tree but also in Session menu and tool bar as well as in tools popup (ctrl+t).
  The import dialog has a new section "Create new import table in database".

#583/#218 SUM function in SQL results
   The upper right of an SQL result tab has a new drop down button which allows to display a sum panel.
