@@ -8,5 +8,7 @@ public enum TableFramesModelChangeType
    COLUMN_WHERE,
    COLUMN_SORTING,
    ROOT_TABLE,
-   COLUMN_SELECT_ALL, COLUMN_WHERE_ALL,
+   COLUMN_SELECT_ALL,
+   COLUMN_WHERE_ALL,
+   SHOW_QUALIFIIED_TABLE_NAME_CHANGED,
 }
