@@ -1,11 +1,13 @@
 package net.sourceforge.squirrel_sql.plugins.graph.querybuilder;
 
 import net.sourceforge.squirrel_sql.plugins.graph.ColumnInfo;
+import net.sourceforge.squirrel_sql.plugins.graph.TableFrameController;
 
 public class SelectCol implements SortedColumn
 {
    private String _qualifiedCol;
 
+   private String _fullyQualifiedCol;
 
    /**
     * Needed for XML deserialization.
@@ -14,10 +16,10 @@ public class SelectCol implements SortedColumn
    {
    }
 
-   public SelectCol(String simpleTableName, ColumnInfo columnInfo)
+   public SelectCol(TableFrameController tfc, ColumnInfo columnInfo)
    {
-      _qualifiedCol = simpleTableName + "." + columnInfo.getColumnName();
-
+      _qualifiedCol = tfc.getDisplayName() + "." + columnInfo.getColumnName();
+      _fullyQualifiedCol = tfc.getTableInfo().getQualifiedName() + "." + columnInfo.getColumnName();
    }
 
    public String getQualifiedCol()
@@ -26,19 +28,29 @@ public class SelectCol implements SortedColumn
    }
 
 
-   /**
-    * Needed for XML deserialization.
-    */
+   //////////////////////////////////////////////////////
+   // Needed for XML deserialization.
    public void setQualifiedCol(String qualifiedCol)
    {
       _qualifiedCol = qualifiedCol;
    }
 
+   public String getFullyQualifiedCol()
+   {
+      return _fullyQualifiedCol;
+   }
+
+   public void setFullyQualifiedCol(String fullyQualifiedCol)
+   {
+      _fullyQualifiedCol = fullyQualifiedCol;
+   }
+   //
+   /////////////////////////////////////////////////
 
    @Override
    public int hashCode()
    {
-      return _qualifiedCol.hashCode();
+      return _fullyQualifiedCol.hashCode();
    }
 
    @Override
@@ -49,6 +61,13 @@ public class SelectCol implements SortedColumn
          return false;
       }
 
-      return _qualifiedCol.equals(((SelectCol)obj)._qualifiedCol);
+      if (null != _fullyQualifiedCol && null != ((SelectCol)obj)._fullyQualifiedCol)
+      {
+         return _fullyQualifiedCol.equals(((SelectCol)obj)._fullyQualifiedCol);
+      }
+      else
+      {
+         return _qualifiedCol.equals(((SelectCol)obj)._qualifiedCol);
+      }
    }
 }
