@@ -1,7 +1,5 @@
 package net.sourceforge.squirrel_sql.plugins.graph.querybuilder;
 
-import net.sourceforge.squirrel_sql.plugins.graph.querybuilder.sqlgen.SelectClauseRes;
-
 public class SelectStructure
 {
    private SelectCol[] _selectCols;
