@@ -6,6 +6,10 @@ Not yet released, available in our GIT repository and in snapshots and future re
 
 Enhancements:
 
+Graph Plugin: Query builder now supports schema/catalog qualified table names.
+   Schema/catalog qualified can be switched on by clicking a Graph's "Kick off" button or by a Graph's right mose menu.
+
+
 The former file import now allows to import from clipboard, too.
 
 Connect button in Alias dialog.
